--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <a href="https://xunhang-website.github.io/About/">About</a>
             <a href="https://xunhang-website.github.io/Service/">Service</a>
             <a href="https://xunhang-website.github.io/Contact/">Contact</a>
-            <a href="https://xunhang-website.github.io/YuZhuohang/" class="active">Myself</a>
+            <a href="https://xunhang-website.github.io/SongSicheng/" class="active">Myself</a>
         </nav>
     </header>
 
